--- a/index.html
+++ b/index.html
@@ -1,9 +1,205 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Resume by vcabourdin</title>
-  </head>
-  <body>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Valentin Cabourdin Resume</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        
+        <script src="js/libs/cssua.min.js"></script>
+
+        <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="assets/css/style.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div class="navbar navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </a>
+                    <a class="brand" href="#">Project name</a>
+                    <div class="nav-collapse">
+                        <ul class="nav">
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="container" class="container">
+            <div class="row-fluid">
+                <p>
+                    <span class="label label-important">This resume is not complete...</span> 
+                </p>
+            </div>
+            <div class="row-fluid">
+                <div class="span2">
+                    <a href="#" class="avatar thumbnail">
+                        <img src="assets/img/avatar.jpg" alt="My avatar">
+                    </a>
+                </div>
+                <div class="span6">
+                    <h1>Front-end developer <small>Valentin Cabourdin</small></h1>
+                    <p>I'm 27 years old and I work since 2007 in the web industry.</p>
+                    <p>I'm currently specialized in developing <span class="label label-success">large scale applications</span> in JavaScript.</p>
+                </div>
+
+                <div class="span4">
+                    <p><span class="label label-info">My favorite frameworks are</span></p>
+                    <ul class="unstyled">
+                        <li><a target="_blank" href="http://requirejs.org" title="More info about requireJS">RequireJS</a> for <a href="http://requirejs.org/docs/whyamd.html" title="More info about AMD">AMD</a></li>
+                        <li><a target="_blank" href="http://documentcloud.github.com/backbone/" title="More info about Backbone.JS">Backbone.JS</a> for MCV</li>
+                        <li><a target="_blank" href="http://jquery.com/" title="More info about jQuery">jQuery</a> for dom manipulations</li>
+                        <li><a target="_blank" href="http://twitter.github.com/bootstrap/" title="More info about Twitter's Bootstrap">Twitter's Bootstrap</a> for beautiful responsive designs</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span12">
+                    <h2>Professional Experience</h2>
+                </div>
+            </div>
+            <p></p>
+            <div class="row-fluid">
+                <div class="span4">
+                    <h3>From 2011</h3>
+                    <p>
+                        <span class="label label-success">Positions</span> 
+                        Web developement manager and PHP/JavaScript developer
+                    </p>
+                    <p>
+                        <span class="label label-success">Company</span> 
+                        Neurones (Web application agency)
+                    </p>
+                </div>
+
+                <div class="span4">
+                    <h3>From 2010 to 2011 </h3>
+                    <p>
+                        <span class="label">Positions</span> 
+                        PHP/JavaScript developer
+                    </p>
+                    <p>
+                        <span class="label">Company</span> 
+                        Label.ch (Communication agency)
+                    </p>
+                </div>
+
+                <div class="span4">
+                    <h3>From 2007 to 2010 </h3>
+                    <p>
+                        <span class="label">Positions</span> 
+                        Web developement manager and PHP/JavaScript developer
+                    </p>
+                    <p>
+                        <span class="label">Company</span> 
+                        E-dkado (E-Shop)
+                    </p>
+                </div>
+
+            </div>
+
+            <hr />
+
+            <div class="row-fluid">
+                <div class="span12">
+                    <h2>Technical Expertise</h2>
+                </div>
+            </div>
+            <p></p>
+            <div class="row-fluid">
+                <dl class="dl-horizontal">
+                    <dt>IHM</dt>
+                    <dd>Architectures applicatives</dd>
+                    <dd>Interfaces graphiques</dd>
+                    <dd>Ergonomie des applications</dd>
+                    <dd>Développement de composants graphiques Web</dd>
+                    <dd>HTML5, CSS3</dd>
+                    <dd>Compatibilité multi navigateurs (IE6, IE7, IE8, IE9, Firefox, Opera, Safari, Chrome)</dd>
+                    <dd>Développement d’applications web mobiles</dd>
+                    <dd>Responsive Design (Bootstrap.js)</dd>
+
+
+
+                    <dt>JavaScript / Ajax </dt>
+                    <dd>Large scale applications</dd>
+                    <dd>Frameworks MVC (Backbone.js)</dd>
+                    <dd>Expert Jquery et Mootools</dd>
+                    <dd>Patterns</dd>
+                    <dd>Jquery mobile</dd>
+
+
+                    <dt>Atlassian products</dt>
+                    <dd>Issue tracker : Jira, Greenhopper, tempo</dd>
+                    <dd>Code source / Code review : Fisheye, Crucible</dd>
+                    <dd>Documentation : Confluence</dd>
+
+
+                    <dt>Agile management</dt>
+                    <dd></dd>
+                    <dd></dd>
+                    <dd></dd>
+                    <dd></dd>
+                    <dd></dd>
+
+                    <dt>Agile management</dt>
+                    <dd></dd>
+                    <dd></dd>
+                    <dd></dd>
+                    <dd></dd>
+                    <dd></dd>
+
+                </dl>
+            </div>
+
+            <hr />
+
+            <div class="row-fluid">
+                <div class="span12">
+                    <h2>Education</h2>
+                </div>
+            </div>
+            <p></p>
+            <div class="row-fluid">
+                <div class="span6">
+                    <h3>DUT informatique</h3>
+                    <p>
+                        Option génie logiciel in Grenoble
+                    </p>
+                </div>
+
+                <div class="span6">
+                    <h3>Licence MIAM</h3>
+                    <p>
+                        Métiers de l’Internet et des Applications Multimédias in Grenoble
+                    </p>
+                </div>
+            </div>
+
+            <hr />
+
+            <footer>
+                <p>&copy; Company 2012</p>
+            </footer>
+
+        </div> <!-- /container -->
+        <div class="resize"></div>
+        
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+        <script src="js/libs/bootstrap.min.js"></script>
+    </body>
 </html>
