--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link href="assets/css/style.css" rel="stylesheet" media="all" />
         <link href="assets/css/print.css" rel="stylesheet" media="print" />
     </head>
-    <body id="me" data-spy="scroll">
+    <body id="me">
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
@@ -29,12 +29,6 @@
                     </a>
                     <a class="brand" href="#bio">Valentin Cabourdin</a>
                     <div class="nav-collapse">
-                        <ul class="nav">
-                            <li  class="active"><a href="#prof">Expérience professionnelle</a></li>
-                            <li><a href="#tech">Expertise technique</a></li>
-                            <li><a href="#etudes">Etudes</a></li>
-                        </ul>
-
                         <ul class="nav pull-right">
                             <li>
                                 <a href="https://twitter.com/vcabourdin" class="twitter-follow-button" data-show-count="false" data-lang="fr" data-show-screen-name="false">Suivre @vcabourdin</a>
