--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <em>
                             Développement d'un thème drupal responsive
                             <br />
-                            Ce CV est responsive !
+                            (Ce CV est responsive)
                         </em>
                         <hr />
                         <ul>
@@ -190,7 +190,7 @@
 
                     <div class="span4 well">
                         <h3>
-                            Sénior PHP5 Objet
+                            PHP5 Objet
                             <span class="label label-success">++</span> 
                         </h3>
                         <hr />
@@ -279,7 +279,7 @@
                         <hr />
                         <ul>
                             <li>Connaissance des outils Google (Analytics, Adwords, webmaster tools,…)</li>
-                            <li>Connaissance avancées des règles de sémantique pour un bon référencement</li>
+                            <li>Connaissances avancées des règles de sémantique pour un bon référencement</li>
                         </ul>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
                         <h3>Langues</h3>
                         <ul>
                             <li>Anglais lu et parlé</li>
-                            <li>Bases en Espagnole</li>
+                            <li>Bases en Espagnol</li>
                         </ul>
                     </div>
                 </div>
