--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <hr />
             </div>
 
-            <div class="spy" id="etudes">
+            <div class="spy " id="etudes">
                 <p></p>
                 <div class="row-fluid">
                     <div class="span12">
@@ -325,7 +325,7 @@
                 <p></p>
                 <div class="row-fluid group">
 
-                    <div class="span12">
+                    <div class="span12 well">
                         <dl class="dl-horizontal">
                             <dt>Licence MIAM</dt>
                             <dd>Métiers de l’Internet et des Applications Multimédias in Grenoble</dd>
