--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     </div>
 
                     <div class="span4 well">
-                        <h3>Autre connaissances</h3>
+                        <h3>Autres connaissances</h3>
                         <ul>
                             <li>Administration de serveur LAMP et WAMP</li>
                             <li>Flash : Bases d’action script</li>
