--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="span6 well">
                     <h1>Développeur front-end</h1><br />
-                    <p>J'ai 27 ans et je réalise depuis 2007 des applications web dynamiques.  </p>
+                    <p>J'ai 29 ans et je réalise depuis 2007 des applications web dynamiques.  </p>
                     <p>Je m'interesse particulierement au développement d'applications coté client en JavaScript.</p>
                 </div>
 
@@ -120,11 +120,12 @@
                         <h3>Depuis 2011</h3>
                         <p>
                             <span class="label label-success">Postes</span> 
+                            Head of web department (Depuis décembre 2012)
                             Chef de projets web et développeur JavaScript/PHP
                         </p>
                         <p>
                             <span class="label label-success">Société</span> 
-                            Neurones (Agence de développement)
+                            Neurones (Agence de développement à Genève)
                         </p>
                     </div>
 
